# invoice2data

./: .bumpversion.cfg  .cookiecutter.json  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .safety-policy.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOP.md  DEVELOP.rst  Dockerfile  GUIi2b.py  LICENSE.md  MANIFEST.in  Makefile  Quality_hosting_ind.py  README.md  README.rst  TUTORIAL.md  TUTORIAL.rst  circle.yml  codecov.yml  comment.txt  data.json  date_parser.py  endpoint.json  environment.yml  main.py  noxfile.py  pdfminer.py  pdftotext.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  templates.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: constraints.txt  coverage-comment.yml  labeler.yml  main.yml  release.yml  tests.yml
GUI/: gui
Sample Output/: Quality Hosting.txt  output.json
benchmarks/: run.py
conda-recipe/: README.md  meta.yaml
docs/: ai.md  backend-benchmark.md  conf.py  cookbook.md  faq.md  how-it-works.md  index.md  installation.md  license.md  migration-1.0.md  quickstart.md  recommended-template-fields.md  reference.md  requirements.txt  tutorial.md  usage.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0c8aa5349f47a1a2___init___py.html  z_0c8aa5349f47a1a2_lines_py.html  z_0c8aa5349f47a1a2_regex_py.html  z_0c8aa5349f47a1a2_static_py.html  z_30a757a473936ad8___init___py.html  z_30a757a473936ad8___main___py.html  z_30a757a473936ad8_exceptions_py.html  z_7ce52a8ab2c011a1__dates_py.html  z_7ce52a8ab2c011a1__regex_py.html  z_7ce52a8ab2c011a1_candidates_py.html  z_7ce52a8ab2c011a1_excalibur_py.html  z_7ce52a8ab2c011a1_invoice_template_py.html  z_7ce52a8ab2c011a1_labels_py.html  z_7ce52a8ab2c011a1_loader_py.html  z_7ce52a8ab2c011a1_schema_py.html  z_7ce52a8ab2c011a1_suggestions_py.html  z_7ce52a8ab2c011a1_template_builder_py.html  z_7ce52a8ab2c011a1_unece_uom_py.html  z_7ce52a8ab2c011a1_utils_py.html  z_7ce52a8ab2c011a1_validators_py.html  z_8db7d682200ddced_camelot_py.html  z_8db7d682200ddced_lines_py.html  z_8db7d682200ddced_tables_py.html  z_a44f0ac069e85531_common_py.html  z_a44f0ac069e85531_test_ai_fallback_py.html  z_a44f0ac069e85531_test_ai_py.html  z_a44f0ac069e85531_test_area_extraction_py.html  z_a44f0ac069e85531_test_camelot_py.html  z_a44f0ac069e85531_test_candidates_py.html  z_a44f0ac069e85531_test_cli_logging_py.html  z_a44f0ac069e85531_test_cli_py.html  z_a44f0ac069e85531_test_cross_page_lines_py.html  z_a44f0ac069e85531_test_csv_output_py.html  z_a44f0ac069e85531_test_dates_py.html  z_a44f0ac069e85531_test_deprecations_py.html  z_a44f0ac069e85531_test_doctr_py.html  (+62 more)
invoice2data/: __init__.py  date_parser.py  image_to_text.py  in_pdfminer.py  in_pdftotext.py  in_tesseract.py  main.py  out_csv.py  output.py  pdfminer.py  pdftotext.py  template.py  templates.py  utils.py
invoice2data/extract/: base_template.py  invoice_template.py  line_template.py  loader.py
invoice2data/extract/plugins/: __interface__.py  lines.py  tables.py
invoice2data/input/: googlecloudvision.py  gvision.py  pdfminer.py  pdfminer_wrapper.py  pdftotext.py  tesseract.py  tesseract4.py
invoice2data/output/: json.py  out_json.py  to_csv.py  to_json.py  to_xml.py
invoice2data/templates/: com.amazon.aws.yml  com.apps4rent.yml  com.binarylife.yml  com.bloomberg.yml  com.cloudns.yml  com.datadoghq.yml  com.digitalocean.yml  com.envato.yml  com.globalsign.yml  com.google.adwords.hk.yml  com.hobohost.yml  com.linode.yml  com.microsoftonline.hk-v2017.yml  com.microsoftonline.hk.yml  com.namecheap.yml  com.nodisto.yml  com.scaleway.yml  com.textmaster.yml  com.tmx.yml  com.twitter.de.yml  com.usersnap.yml  de.amazon.yml  de.ovh.yml  de.qualityhosting.yml
invoice2data/templates/ch/: ch.pcengines.yml
invoice2data/templates/es/: es.supplies24.yml
invoice2data/templates/fr/: 380129866rcsparis.yml  487530099.yml  792377731.yml  com.adobe.ie.yml  com.akretion.fr.yml  com.capitainetrain.yml  com.coriolis.yml  com.easyjet.fr.yml  com.hootsuite.yml  com.jeanbesson.yml  com.ldlc.yml  com.mention.yml  com.myflyingbox.yml  com.officetimeline.yml  com.orange-business.mobile.yml  com.ovh.fr.yml  com.saur.yml  com.soyoustart.yml  coordonnéesbancairesfutur.yml  edfentreprises.yml  eu826010755.yml  eu826021784.yml  fr-50440585297.yml  fr.airfrance.yml  fr.bouyguestelecom.yml  fr.domaine-achat.yml  fr.easytrip.yml  fr.edf.entreprises.yml  fr.finagaz.yml  fr.free.adsl-fiber.yml  fr.free.mobile.yml  fr.ge-iroise.yml  fr.jpg.yml  (+36 more)
invoice2data/test/: common.py  test.py  test_cli.py  test_extraction.py  test_lib.py
invoice2data_gui/: main.py
src/invoice2data/: __init__.py  __main__.py  exceptions.py  main.py
tests/: __init__.py  common.py  test_ai.py  test_ai_fallback.py  test_area_extraction.py  test_camelot.py  test_candidates.py  test_cli.py  test_cli_logging.py  test_cross_page_lines.py  test_csv_output.py  test_dates.py  test_deprecations.py  test_doctr.py  test_excalibur.py  test_exceptions.py  test_extraction.py  test_gvision.py  test_input_interface.py  test_interactive_template.py  test_invoice_template.py  test_issue_497.py  test_issue_535.py  test_issue_544.py  test_issue_608.py  test_issue_618.py  test_issue_652.py  test_labels.py  test_lib.py  test_lines_replace.py  test_loader.py  test_loader_errors.py  test_main.py  test_main_helpers.py  test_ocrmypdf.py  test_output_stdout.py  test_output_xml.py  test_paddleocr.py  test_pdf_backends.py  test_regex_cache.py  (+11 more)
tests/compare/: AmazonWebServices.json  AzureInterior.json  FlipkartInvoice.json  NetpresseInvoice.json  Orlen.json  Orlen.txt  QualityHosting.json  SammyMaystoneLinesTest.json  coolblue1.json  coolblue2.json  free_fiber.json  oyo.json  saeco.json
tests/custom/: basic.json  basic.txt  lines-a.json  lines-a.txt  lines-b.json  lines-b.txt  lines-basic.json  lines-basic.txt  lines-blocks.json  lines-blocks.txt  lines-multiple-patterns.json  lines-multiple-patterns.txt  options-accents.json  options-accents.txt  options-replace.json  options-replace.txt  table-groups.json  table-groups.txt
(+350 files in other folders)
