[metadata]
name = invoice2data
author = Manuel Riel
description = Python parser to extract data from pdf invoice
version = 0.3.5
url = https://github.com/invoice-x/invoice2data
keywords =
  pdf
  invoicing
# List of classifiers: https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
  Development Status :: 4 - Beta
  Environment :: MacOS X
  Environment :: Console
  Environment :: Win32 (MS Windows)
  Operating System :: MacOS
  Operating System :: POSIX
  Operating System :: Unix
  Operating System :: Microsoft :: Windows
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Office/Business :: Financial
  Topic :: Office/Business :: Financial :: Accounting
long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE.txt

[options]
setup_requires =
  pip >= 10
  pytest-runner
  setuptools_git
  pytest-runner
install_requires =
  chardet
  pillow
  pyyaml
  dateparser
  unidecode

[options.extras_require]
test = pytest; pytest-cov; flake8; pdfminer; tox

[options.entry_points]
console_scripts =
  invoice2data = invoice2data.main:main

[tool:pytest]
addopts = -vs --cov invoice2data
testpaths = tests
filterwarnings =
    ignore::DeprecationWarning

[coverage:run]
source = src

[flake8]
ignore = E203
max-line-length = 120
exclude =
    build,dist,.git,.idea,.cache,.tox,.eggs,

[tox:tox]
envlist = py36,py37,py38,flake8
skip_missing_interpreters = True

[testenv]
commands = pytest
extras = test

[testenv:flake8]
commands=flake8 src tests
extras = test
